--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
     </head>
     <body>
-        <h1>Bonjour à tous</h1>
+        <h1>Salut à tous</h1>
         
         <p>
             Un premier petit paragraphe.
