--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             Un premier petit paragraphe.
         </p>
         
-        <h2>la je suis bieng</h2>
+        <h2>oooh je suis bieng</h2>
         
         <p>
           <a>je suis pas sur de savoir quoi dire mais voila voila.</a>.
